ingress/frontend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: myapp
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
